--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header{
+  width: 60%;
+  border-radius: 10px;
+  background-color: black;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin: auto;
+  height: 250px;
+}
+
+.header h1{
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.header input{
+  width: 60%;
+  height: 30px;
+  padding-left: 10px;
+  border-radius: 5px;
+}
+.header button{
+  width: 100px;
+  height: 35px;
+  border-radius: 5px;
+  background-color: black;
+  color: white;
+  border-color: white;
+  cursor: pointer;
+}
+.btn{
+  width: 300px;
+  display: flex;
+  justify-content: space-around;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main{
+  width: 60%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+}
+.list{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+.list button{
+  width: 80px;
+  height: 35px;
+  border-radius: 5px;
+  background-color: black;
+  color: white;
+  border-color: white;
+  cursor: pointer;
+
+}
+.text{
+  width: 40%;
+  align-self: center;
+}
+.lineTh{
+  width: 40%;
+  align-self: center;
+  text-decoration: line-through;
 }
